- use Pedigree\Helper for url definitions ($helper->url()) (zyspec)
- fixed links in breeder.php page(s) (zyspec)
- refactored ./tools.php (zyspec)
- moved picker.js and picker.html to ./assets/js folder (zyspec)
- moved some hard coded language strings to language file(s) (zyspec)
- begin conversion from direct SQL SELECT calls to use object classes (zyspec)

WORK IN PROGRESS

---------------------------------------
1.31 Alpha 8             NOT RELEASED
---------------------------------------
- split ./include/class_field.php into individual class files in ./class (zyspec)
- moved Pedigree\Utility from Pedigree\Utility.php to utility.php (zyspec)
- utilize Pedigree\Helper module helper (zyspec)
- significant code cleanup (zyspec)
- switched from Field class to Pedigree\Field (zyspec)
- created Pedigree\Animal class to replace Animal class (zyspec)
- refactored install routine (zyspec)
  - <uploads>/images and <uploads>/images/thumbnails directories were not being created
- improved XOOPS 2.5.7 compatibility (zyspec)
- fixed link alt/title tags incorrectly formatted (zyspec)
- fixed display of picture in various places (zyspec)
- switched filtering to use XoopsRequest (zyspec)
- renamed some functions/methods to be more PSRx compliant (zyspec)
- XOOPS 2.5.8 compatibility (mamba)
- renamed "lookup" to "lookupField" (mamba)
- more PSR-2 cleanup (mamba)
- various fixes (bleekk)
- Welcome Message (bleekk)
- Replace old php pie chart with canvasjs (bleekk)



TODO (suggested by Zyspec):
- refactor most of the module
- move CheckoutWizard class to ./class
- move ZervWizard classes to ./library
- move hard coded language strings to language files
- some code assumes "dog" but should be expanded to include all animals
- refactor Pedigree\Field::getForm() - it tries to use XoopsObjectTree which isn't
  appropriate for the pedigree_fields dB structure
- most text fields are only 30 chars long in dB, should be increased.